--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,10 @@
   display: inline-block;
 }
 
+.siteone {
+  width: 1024px;
+}
+
 .body {
   background-image: url(/img1.jpg);
   background-size: cover;
